<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controller</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="remote_service_started">Remote service has started</string>
    <string name="remote_service_stopped">Remote service has stopped</string>
    <string name="remote_service_label">Sample Remote Service</string>
    <string name="remote_service_controller">This demostrates how you can implement
         persistent services running in a separate process that may be started 
         and stopped as desired</string>
    <string name="remote_service_binding">This demostrates how you can connect with a persistent 
        	service running in another process. Use the kill button to see what happens when
        	the process crahes</string>
	<string name="start_service">Start Service</string>
	<string name="stop_service">Stop Service</string> 
	<string name="bind_service">Bind Service</string>
	<string name="unbind_service">Unbind Service</string>
	<string name="kill_process">Kill Process</string>
	<string name="remote_service_connected">Connected to remote service</string>
	<string name="remote_service_disconnected">Disconnected from remote service</string>
	<string name="remote_call_failed">Failure calling remote service</string>
</resources>
