<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="4dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="4dip"
        android:text="@string/remote_service_controller" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="4dip" 
        android:text="@string/remote_service_binding"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />
    
    

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service" />
    
    <Button android:id="@+id/bind"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/bind_service">
        <requestFocus/>
        </Button>
        
    <Button android:id="@+id/unbind"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/unbind_service">        
    </Button>
    
    <Button android:id="@+id/kill"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/kill_process">
    </Button>
    
    <TextView
        android:id="@+id/callback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="4dip" />

</LinearLayout>
